# coursera_red-belt_c

./: CMakeLists.txt
final_project/my_solution/: main.cpp  search_server.cpp  search_server.h
include/: profile.h
week1/Log/: log.cpp
week1/bad_macro/: bad_macro.cpp
week1/deque_via_two_vectors/: deque_via_two_vectors.cpp
week1/max_elem_if/: max_element_if.cpp
week1/paginator/: paginator.cpp
week1/sort_by/: sort_by.cpp
week1/table/: table.cpp
week1/uniq_id/: uniq_id.cpp
week1/update_field/: update_field.cpp
week2/booking/: booking_manager.cpp  course_solution.cpp
week2/compare_students/: sort_student.cpp
week2/ebook/: course_solution.cpp  ebook.cpp
week2/express/: express.cpp
week2/learner/: learner.cpp
week3/linked_list/: linked_list.cpp
week3/object_pool/: course_solution.cpp  object_pool.cpp
week3/simple_vector/: course_solution.h  simple_vector.cpp  simple_vector.h
week3/swap_sort_copy/: course_solution.cpp  swap_sort_copy.cpp
week4/airport_counter/: airport_counter.cpp  course_solution.cpp
week4/athletes/: athletes.cpp  course_solution.cpp
week4/server_stats/: stats.cpp  stats.h
week4/stack_vector/: stack_vector.cpp  stack_vector.h
week4/text_editor/: course_solution.cpp  text_editor.cpp
week4/translator/: course_solution.cpp  translator.cpp
week5/concurrent_map/: concurrent_map.cpp  course_solution.cpp
week5/explore_keywords/: course_solution.cpp  explore_key_words.cpp
week5/group_heavy_strings/: course_solution.cpp  group_heavy_strings.cpp
week5/matrix_sum/: matrix_sum.cpp
(+12 files in other folders)
